--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>NP SEP Career</title>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="root"></div>
