--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicorn_1.png" style="width: 1px;"/>
+    <link rel="icon" type="image/png" href="/favicorn_1.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NP SEP Career</title>
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
